2003-01-24    <johan@CP255758-A>

	* src/ds390/gen.c (aopOp): fixed bug #667458
	* src/SDCCglue.c (emitRegularMap): fixed bug #458099 again
	* src/SDCCast.c (createIvalCharPtr): fixed bug #661910
	(createIvalCharPtr): an ival doesn't always have a storage class anymore

2003-01-24  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/peeph.def: better assembler identation by Frieder
	* src/mcs51/gen.c: better assembler identation by Frieder

2003-01-22  Bernhard Held <bernhard@bernhardheld.de>

	* as/z80/string.h: removed for gcc 3.2
	* support/makebin/makebin.c: #include <string.h> for gcc 3.2
	* src/pic/pcode.c (get_op_from_instruction): fix concatenation of string literals with __FUNCTION__ for gcc 3.2

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): rename mem and map files even in case of failure
	* src/SDCCpeeph.c (replaceRule): fix bug #663503
	* support/regression/Makefile: separate temp files for ports
	* support/regression/generate-cases.py: separate temp files for ports
	* src/mcs51/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b
	* src/ds390/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* moved tinitalk to device/examples/ds390

2003-01-14  Bernhard Held <bernhard@bernhardheld.de>

	* as/mcs51/lkmem.c: rflag is for DS390
	* src/SDCCglobl.h: removed out_name and options stackOnData, genericPtr
	* src/SDCCmain.c (optionsTable, setDefaultOptions): removed --stack-after-data and --generic
			 (linkEdit): move mem- and map-files the same way as ihx-files
	* src/z80/main.c (_setDefaultOptions): removed --generic
	* src/SDCCmain.c (_processC1Arg, parseCmdLine, main): --c1mode works again
	* src/SDCCglue.c (createInterruptVect, glue): --c1mode works again
	* src/pic/glue.c (picglue): --c1mode works again
	* src/pic16/glue.c (pic16glue): --c1mode works again
	* src/asm.c (printCLine): fix #660034
